[package]
name = "rocketmq"
description = "Rust client for Apache RocketMQ"
keywords = ["rocketmq", "mq", "message-queue"]
version = "0.0.1"
authors = ["messense <messense@icloud.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/messense/rocketmq-rs.git"

[dependencies]
byteorder = "1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
hex = "0.4"
rand = "0.7.3"
tokio = { version = "0.2", features = ["tcp", "dns", "io-util", "time", "macros"] }
num_enum = "0.5.1"
reqwest = { version = "0.10.7", default-features = false, features = ["blocking"] }
futures = "0.3.5"
tokio-util = "0.3.1"
bytes = "0.5.6"
bitflags = "1.2.1"
dirty-json = "0.1.0"
bitflags_serde_shim = "0.2.2"
if-addrs = "0.6.0"
fnv = "1.0.7"
base64 = "0.12.3"
hmac = "0.8.1"
sha-1 = "0.9.1"
tracing = "0.1.19"
parking_lot = "0.11.0"
async-trait = "0.1.36"
once_cell = "1.4.0"
