[package]
name = "rocketmq"
description = "Rust client for Apache RocketMQ"
keywords = ["rocketmq", "mq", "message-queue"]
version = "0.0.4"
authors = ["messense <messense@icloud.com>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/messense/rocketmq-rs.git"

[dependencies]
byteorder = "1.4.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
hex = "0.4.3"   #binary
rand = "0.8.5"
tokio = { version = "1", features = ["net", "io-util", "time", "macros", "fs", "rt", "sync"] }
num_enum = "0.5.6"
reqwest = { version = "0.11", default-features = false, features = ["blocking"] }
futures = "0.3"
tokio-util = { version = "0.7.0", features = ["codec"] }
bytes = "1"
bitflags = "1"
dirty-json = "0.1.0"
bitflags_serde_shim = "0.2.2"
if-addrs = "0.7.0"  #get local address
fnv = "1.0.7"
base64 = "0.13"
hmac = "0.12"
sha-1 = "0.10"
tracing = "0.1"
parking_lot = "0.12.0"
async-trait = "0.1"
once_cell = "1.9.0"  #Lazy
time = "0.3.7"
tracing-futures = "0.2"
consistent_hash_ring = "0.8.0"

[dev-dependencies]
tracing-subscriber = "0.3.9"
